# modular-rust-platform

./: AGENTS.md  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.serena/: project.yml
crates/stano-axum/: Cargo.toml  README.md
crates/stano-axum/src/: lib.rs
crates/stano-axum/src/error/: api_error.rs  error_response.rs  mod.rs
crates/stano-axum/src/extractors/: app_json.rs  app_path.rs  app_query.rs  mod.rs
crates/stano-axum/src/middleware/: error_logging.rs  mod.rs  request_logging.rs
crates/stano-common/: Cargo.toml  README.md
crates/stano-common/src/: error.rs  id_types.rs  lib.rs  service_error.rs
crates/stano-di/: Cargo.toml  README.md
crates/stano-di-macros/: Cargo.toml  README.md
crates/stano-di-macros/src/: lib.rs
crates/stano-di-macros/tests/fixtures/no_di_consumer/: Cargo.toml
crates/stano-di-macros/tests/fixtures/stano_starter_consumer/: Cargo.toml
crates/stano-di-macros/tests/ui/: component_missing_sync.rs  component_missing_sync.stderr  component_on_non_trait.rs  component_on_non_trait.stderr  component_without_send_sync.rs  component_without_send_sync.stderr  service_bad_trait_type_token.rs  service_bad_trait_type_token.stderr  service_on_non_struct.rs  service_on_non_struct.stderr  service_on_tuple_struct.rs  service_on_tuple_struct.stderr  service_with_non_arc_field.rs  service_with_non_arc_field.stderr
crates/stano-di/src/: application_context.rs  container.rs  environment.rs  lib.rs
crates/stano-di/tests/: macro_integration.rs
crates/stano-launcher/: Cargo.toml  README.md  build.rs
crates/stano-launcher/src/: auth.rs  authorization.rs  config.rs  lib.rs  observability.rs  server.rs  shutdown.rs
crates/stano-seaorm/: Cargo.toml  README.md
crates/stano-seaorm/src/: db_config.rs  lib.rs  mapper.rs  query_tracing.rs
crates/stano-security/: Cargo.toml  README.md
crates/stano-security/src/: jwt.rs  lib.rs  security_context.rs
crates/stano-starter/: Cargo.toml  README.md
crates/stano-starter-domain/: Cargo.toml  README.md
crates/stano-starter-domain/src/: lib.rs
crates/stano-starter-rest/: Cargo.toml  README.md
crates/stano-starter-rest/src/: lib.rs
crates/stano-starter-service/: Cargo.toml  README.md
crates/stano-starter-service/src/: lib.rs
crates/stano-starter/src/: lib.rs
docs/: openapi.json
