[package]
name = "stano-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
stano-common = { path = "../stano-common" }
axum = { version = "0.8.7", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
