[package]
name = "stano-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
stano-di       = { path = "../stano-di" }
stano-security = { path = "../stano-security" }
stano-axum     = { path = "../stano-axum" }

tokio          = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum           = { version = "0.8.7" }
tower-http     = { version = "0.6", features = [
    "cors", "timeout", "trace", "compression-full",
    "request-id", "catch-panic", "set-header", "limit",
] }

tracing = "0.1"
anyhow  = "1"
