[package]
name = "stano-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
stano-di       = { path = "../stano-di" }
stano-security = { path = "../stano-security" }
stano-axum     = { path = "../stano-axum" }

tokio          = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum           = { version = "0.8.7" }
tower-http     = { version = "0.6", features = [
    "cors", "timeout", "trace", "compression-full",
    "request-id", "catch-panic", "set-header", "limit",
] }

tracing = "0.1"
anyhow  = "1"

tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "http-proto", "logs", "metrics", "trace"] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-semantic-conventions = "0.32"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
