[package]
name = "stano-seaorm"
version = "0.1.0"
edition = "2024"

[dependencies]
stano-di = { path = "../stano-di" }

sea-orm = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-test = "0.2"
